# cardano-ledger-read

./: 404.html  AGENTS.md  CHANGELOG.md  README.md  cabal.project  cardano-ledger-read.cabal  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.github/workflows/: CI.yaml  build-docs.yaml  deploy-docs.yaml  release-please.yaml
.specify/memory/: constitution.md
api/: index.html
architecture/: index.html
docs/: api.md  architecture.md  index.md
nix/: project.nix
search/: search_index.json
skills/cardano-ledger-read-guide/: SKILL.md
src/Cardano/Read/Ledger/: Address.hs  PParams.hs  Value.hs
src/Cardano/Read/Ledger/Block/: BHeader.hs  Block.hs  BlockNo.hs  Gen.hs  HeaderHash.hs  SlotNo.hs  Txs.hs
src/Cardano/Read/Ledger/Eras/: EraValue.hs  KnownEras.hs
src/Cardano/Read/Ledger/Tx/: CBOR.hs  Certificates.hs  CollateralInputs.hs  CollateralOutputs.hs  ExtraSigs.hs  Fee.hs  Hash.hs  Inputs.hs  Integrity.hs  Metadata.hs  Mint.hs  Output.hs  Outputs.hs  ReferenceInputs.hs  ScriptValidity.hs  Tx.hs  TxId.hs  Validity.hs  Withdrawals.hs  Witnesses.hs
test/Test/Unit/Cardano/Read/Ledger/: BlockSpec.hs  TxSpec.hs
